# SedeenPlugins-MLCD

./: .gitignore  LICENSE  README.md
Diagnosis/: CMakeLists.txt  Diagnosis.cpp  Diagnosis.h  PythonException.cpp  PythonKernel.cpp  PythonKernel.h  PythonObject.cpp
ROISegmentation/: CMakeLists.txt  PythonKernel.cpp  PythonKernel.h  PythonObject.h  ROISegmentation.cpp  ROISegmentation.h
ROIWindowClassifier/: CMakeLists.txt  PythonKernel.cpp  PythonKernel.h  PythonObject.cpp  ROIWindowClassifier.cpp  ROIWindowClassifier.h
